--- a/Jbcmp/Jbcmp.iOS/Resources/LaunchScreen.storyboard
+++ b/Jbcmp/Jbcmp.iOS/Resources/LaunchScreen.storyboard
@@ -20,24 +20,32 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                             </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="54" animating="YES" fixedFrame="YES">
+                                <rect key="frame" x="-59" y="-284" width="37" height="37"/>
+                            </activityIndicatorView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="77" misplaced="YES" animating="YES" userInteractionEnabled="NO" hidesWhenStopped="YES">
+                                <rect key="frame" x="150" y="444" width="37" height="37"/>
+                                <color key="color" colorSpace="calibratedWhite" white="0.333333333333333" alpha="1"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
                         <color key="tintColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
                         <constraints>
-                            <constraint id="46" firstItem="yd7-JS-zBw" firstAttribute="trailing" secondItem="23" secondAttribute="trailing"/>
-                            <constraint id="47" firstItem="23" firstAttribute="leading" secondItem="yd7-JS-zBw" secondAttribute="leading"/>
-                            <constraint id="48" firstItem="23" firstAttribute="top" secondItem="Y8P-hJ-Z43" secondAttribute="bottom"/>
-                            <constraint id="50" firstItem="9ZL-r4-8FZ" firstAttribute="top" secondItem="23" secondAttribute="bottom"/>
+                            <constraint id="73" firstItem="23" firstAttribute="top" secondItem="Y8P-hJ-Z43" secondAttribute="bottom"/>
+                            <constraint id="74" firstItem="yd7-JS-zBw" firstAttribute="trailing" secondItem="23" secondAttribute="trailing"/>
+                            <constraint id="75" firstItem="23" firstAttribute="leading" secondItem="yd7-JS-zBw" secondAttribute="leading"/>
+                            <constraint id="76" firstItem="9ZL-r4-8FZ" firstAttribute="top" secondItem="23" secondAttribute="bottom"/>
+                            <constraint id="78" firstItem="23" firstAttribute="centerX" secondItem="77" secondAttribute="centerX"/>
+                            <constraint id="79" firstItem="77" firstAttribute="centerY" secondItem="23" secondAttribute="centerY"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XAI-xm-WK6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="349" y="339"/>
+            <point key="canvasLocation" x="342" y="309"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Icon-Small-40.png" width="40" height="40"/>
         <image name="Icon-Small.png" width="29" height="29"/>
         <image name="Icon.png" width="57" height="57"/>
         <image name="background_original.png" width="1280" height="1731"/>
